--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,19 @@
+/* scrollbar */
+*::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+  /* border-radius: 12px; */
+}
+
+/* root */
 #root {
   display: flex;
   flex-direction: column;
