--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,16 +1,12 @@
 /* scrollbar */
+* {
+  scrollbar-width: none;
+}
 *::-webkit-scrollbar {
-  width: 0.5em;
+  width: 0em;
 }
-
-*::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
-}
-
 *::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
-  /* border-radius: 12px; */
+  background-color: rgb(218, 218, 218);
 }
 
 /* root */
